add layout with shared component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="hold-transition login-page">
   <div class="login-box">
     <div class="login-logo">
-      <a routerLink="/"><b>CodeGym</b></a>
+      <a routerLink="/"><b></b></a>
     </div>
     <div class="card">
       <div class="card-body login-card-body">
