--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -42,7 +42,11 @@
         </div>
       </div>
     </div>
-    <div class="col-md-2"></div>
+    <div class="col-md-2 text-center">
+      <button class="btn btn-outline-primary">
+        <span><i class="fas fa-arrow-right fa-3x"></i></span>
+      </button>
+    </div>
     <div class="col-md-3">
       <div class="card">
         <div class="card-header">
