add click event

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="col-md-2 text-center">
-      <button class="btn btn-outline-primary">
+      <button class="btn btn-outline-primary" (click)="moveWaitingListToResultList()">
         <span><i class="fas fa-arrow-right fa-3x"></i></span>
       </button>
     </div>
