--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -25,7 +25,7 @@
           </div>
         </div>
         <div class="card-body">
-          <table id="example2" class="table table-hover">
+          <table class="table table-hover">
             <thead>
             <tr>
               <th style="width: 150px">Số</th>
@@ -44,6 +44,7 @@
       </div>
     </div>
     <div class="col-md-2 text-center">
+      <input type="text" name="point" [(ngModel)]="point">
       <button class="btn btn-outline-primary" (click)="moveWaitingListToResultList()">
         <span><i class="fas fa-arrow-right fa-3x"></i></span>
       </button>
@@ -59,14 +60,18 @@
           </div>
         </div>
         <div class="card-body">
-          <div class="row" *ngFor="let number of resultNumbers">
-            <div class="col-md-10">
-              <span>{{number.Number}}</span>
-            </div>
-            <div class="col-md-2">
-              <span>{{number.ExtraPrice}}</span>
-            </div>
-          </div>
+          <table class="table table-hover">
+            <thead>
+            <tr>
+              <th>Point</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let result of resultList" >
+              <td>{{result}}</td>
+            </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
