add submit function

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -72,6 +72,20 @@
               <td>{{number.ExtraPrice}} x {{number.point}}</td>
             </tr>
             </tbody>
+            <tfoot>
+            <tr>
+              <td></td>
+              <td class="text-bold">Tổng điểm:</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>
+                <button class="btn btn-outline-primary" (click)="submit()">
+                  Đánh
+                </button>
+              </td>
+            </tr>
+            </tfoot>
           </table>
         </div>
       </div>
