--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -5,7 +5,16 @@
       <div class="col-sm-4">
         <h1>Tỉ lệ</h1>
       </div>
-      <div class="col-sm-2"></div>
+      <div class="col-sm-2">
+        <div class="row">
+          <div class="col-8">
+            <textarea name="data" [(ngModel)]="data" rows="3"></textarea>
+          </div>
+          <div class="col-2">
+            <button class="btn btn-outline-primary" (click)="searchNumber()">Search</button>
+          </div>
+        </div>
+      </div>
       <div class="col-sm-4">
       </div>
       <div class="col-sm-1"></div>
@@ -13,10 +22,6 @@
   </div><!-- /.container-fluid -->
 </section>
 <section class="content">
-  <div class="row">
-    <textarea name="data" [(ngModel)]="data" rows="3"></textarea>
-    <button (click)="searchNumber()">Search</button>
-  </div>
   <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-3">
@@ -57,6 +62,9 @@
           </h3>
 
           <div class="card-tools">
+            <button class="btn btn-outline-danger" (click)="clearAll()">
+              Xóa hết
+            </button>
           </div>
         </div>
         <div class="card-body">
