--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -15,7 +15,12 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-2">
+        <div class="col-8">
+          <textarea name="data" [(ngModel)]="exportData" rows="3"></textarea>
+        </div>
+      </div>
+      <div class="col-sm-2">
       </div>
       <div class="col-sm-1"></div>
     </div>
