--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -33,7 +33,7 @@
       <div class="card">
         <div class="card-header">
           <h3 class="card-title"></h3>
-          <input type="text" (keyup)="filterNumberLowerThan()" placeholder="Nhập điểm" name="search"
+          <input type="text" placeholder="Nhập điểm" name="search"
                  [(ngModel)]="search">
           <div class="card-tools">
           </div>
@@ -57,7 +57,6 @@
       </div>
     </div>
     <div class="col-md-2 text-center">
-      <input type="text" name="point" [(ngModel)]="point">
     </div>
     <div class="col-md-3">
       <div class="card">
