--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -16,9 +16,15 @@
           <a class="nav-link" routerLink="login"><i class="fas fa-sign-in-alt fa-lg"></i> Đăng nhập</a>
         </li>
       </ul>
-      <ul class="navbar-nav mr-auto" *ngIf="currentUser">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="#" (click)="logout()"><i class="fas fa-sign-out-alt"></i> Đăng xuất</a>
+      <ul class="navbar-nav ml-auto mr-lg-5" *ngIf="currentUser">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+             aria-haspopup="true" aria-expanded="false">
+            {{username}}
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="nav-link" routerLink="#" (click)="logout()"><i class="fas fa-sign-out-alt"></i> Đăng xuất</a>
+          </div>
         </li>
       </ul>
     </div>
