--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -31,8 +31,8 @@
             </button>
           </div>
         </div>
-        <div class="card-body table-responsive p-0">
-          <table class="table table-bordered table-head-fixed">
+        <div class="card-body table-responsive p-0" style="height: 350px;">
+          <table class="table table-head-fixed">
             <thead>
             <tr>
               <th>Số</th>
@@ -49,19 +49,25 @@
               <td>{{number.ExtraPrice * number.point}}</td>
             </tr>
             </tbody>
-            <tfoot>
+            <tfoot *ngIf="resultNumbers.length!=0">
             <tr>
               <td class="text-bold">Tổng số: {{resultNumbers.length}}</td>
               <td class="text-bold">Tổng điểm: {{totalPoint}}</td>
               <td></td>
               <td class="text-bold">Tổng tiền: {{totalMoney}}</td>
             </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td class="align-bottom">
+                <button class="btn btn-outline-danger float-lg-right" (click)="clearAll()">
+                  Xóa hết
+                </button>
+              </td>
+            </tr>
             </tfoot>
           </table>
-          <hr>
-          <button class="btn btn-outline-danger mt-2 float-lg-right" (click)="clearAll()">
-            Xóa hết
-          </button>
         </div>
       </div>
     </div>
