--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -16,21 +16,30 @@
       <div class="form-group">
         <button class="btn btn-outline-primary" (click)="searchNumber()">Nhập dữ liệu</button>
       </div>
-      <div class="card-body table-responsive p-0" style="height: 350px;">
-        <table class="table table-head-fixed">
-          <thead>
-          <tr>
-            <th style="width: 150px">Số</th>
-            <th>Điểm</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr *ngFor="let number of filterNumbers">
-            <td>{{number.Number}}</td>
-            <td>{{number.ExtraPrice}}</td>
-          </tr>
-          </tbody>
-        </table>
+      <div class="card">
+        <div class="card-header">
+          <h3 class="card-title">
+            THÔNG TIN
+          </h3>
+          <div class="card-tools">
+          </div>
+        </div>
+        <div class="card-body table-responsive p-0" style="height: 350px;">
+          <table class="table table-head-fixed">
+            <thead>
+            <tr>
+              <th style="width: 150px">Số</th>
+              <th>Điểm</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let number of filterNumbers">
+              <td>{{number.Number}}</td>
+              <td>{{number.ExtraPrice}}</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
     <div class="col-md-1 text-center">
