add sidebar component

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,59 @@
-<p>sidebar works!</p>
+<aside class="main-sidebar sidebar-dark-primary elevation-4">
+  <!-- Brand Logo -->
+  <a routerLink="" class="brand-link">
+    <span class="brand-text font-weight-light">One969</span>
+  </a>
+
+  <!--   Sidebar-->
+  <div class="sidebar">
+    <!-- Sidebar user (optional) -->
+    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+      <div class="image">
+        <i class="fa fa-user fa-2x" style="color: white"></i>
+      </div>
+      <div class="info">
+        <a  class="d-block">{{username}}</a>
+      </div>
+    </div>
+
+    <!-- Sidebar Menu -->
+    <nav class="mt-2">
+      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+        <li class="nav-item">
+          <a routerLink="/homepage" class="nav-link">
+            <i class="nav-icon fas fa-list"></i>
+            <p>
+              Đề
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/" class="nav-link">
+            <i class="nav-icon fas fa-list"></i>
+            <p>
+              Đít nhất
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/" class="nav-link">
+            <i class="nav-icon fas fa-list"></i>
+            <p>
+              Xiên
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/" class="nav-link">
+            <i class="nav-icon fas fa-list"></i>
+            <p>
+              3 càng
+            </p>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- /.sidebar-menu -->
+  </div>
+  <!--   /.sidebar-->
+</aside>
