--- a/src/app/layout-with-shared/layout-with-shared.component.html
+++ b/src/app/layout-with-shared/layout-with-shared.component.html
@@ -1,4 +1,11 @@
-<div class="container-fluid">
-  <app-navbar></app-navbar>
-  <router-outlet></router-outlet>
+<div class="hold-transition sidebar-mini">
+  <div class="wrapper">
+    <app-navbar></app-navbar>
+    <app-sidebar></app-sidebar>
+    <div class="content-wrapper">
+      <div class="container-fluid">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
 </div>
