change point to giá tiền

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -109,7 +109,7 @@
             <tr>
               <th>Số</th>
               <th></th>
-              <th>Point</th>
+              <th>Giá tiền</th>
               <th></th>
             </tr>
             </thead>
