change point to giá tiền

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -62,7 +62,7 @@
             <tr>
               <th>Số</th>
               <th>Điểm</th>
-              <th>Point</th>
+              <th>Giá tiền</th>
               <th>Thành tiền</th>
             </tr>
             </thead>
