--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -8,6 +8,10 @@
         <input id="search" type="text" placeholder="Nhập số" name="search" [(ngModel)]="search">
       </div>
       <div class="form-group">
+        <label for="maximum">Điểm tối đa: </label>
+        <input id="maximum" type="text" placeholder="Nhập số điểm tối đa" name="maximum" [(ngModel)]="maximum">
+      </div>
+      <div class="form-group">
         <textarea name="data" [(ngModel)]="data" cols="60" rows="5" placeholder="Input"></textarea>
       </div>
       <div class="form-group" *ngIf="numberOfInput != 0">
