add scroll bar to latest list

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -113,7 +113,7 @@
           <div class="card-tools">
           </div>
         </div>
-        <div class="card-body table-responsive p-0">
+        <div class="card-body table-responsive p-0" style="height: 350px;">
           <table class="table table-head-fixed">
             <thead>
             <tr>
