--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -143,3 +143,24 @@
     <div class="col-md-2"></div>
   </div>
 </section>
+<div class="modal fade" id="modal-danger">
+  <div class="modal-dialog">
+    <div class="modal-content bg-danger">
+      <div class="modal-header">
+        <h4 class="modal-title">KHÔNG NHẬP ĐÚNG ĐỊNH DẠNG</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Xin hãy nhập như mẫu sau: Đề: 01,02x1n</p>
+      </div>
+      <div class="modal-footer float-lg-right">
+        <button type="button" class="btn btn-outline-light " data-dismiss="modal">Đóng</button>
+      </div>
+    </div>
+    <!-- /.modal-content -->
+  </div>
+  <!-- /.modal-dialog -->
+</div>
+
