--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -48,7 +48,7 @@
             <tr *ngFor="let number of filterNumbers">
               <td>{{number.Number}}</td>
               <td>{{number.ExtraPrice}}</td>
-              <td>{{number.totalPoint == null ? 0 : 1}}</td>
+              <td>{{number.totalPoint == null ? 0 : number.totalPoint}}</td>
             </tr>
             </tbody>
           </table>
