--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -150,16 +150,18 @@
   <div class="modal-dialog">
     <div class="modal-content bg-danger">
       <div class="modal-header">
-        <h4 class="modal-title">KHÔNG NHẬP ĐÚNG ĐỊNH DẠNG</h4>
+        <h4 class="modal-title">XẢY RA LỖI</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <p>Xin hãy nhập như mẫu sau: Đề: 01,02x1n</p>
+        <p>{{message}}</p>
       </div>
       <div class="modal-footer float-lg-right">
         <button type="button" class="btn btn-outline-light " data-dismiss="modal">Đóng</button>
+        <button *ngIf="continue" type="button" class="btn btn-primary" (click)="splitInputData()">Tiếp tục
+        </button>
       </div>
     </div>
     <!-- /.modal-content -->
