add routing for xien

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -36,7 +36,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a routerLink="/" class="nav-link">
+          <a routerLink="/xien" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
               Xiên
