show diem lo xien

--- a/src/app/xien/xien.component.html
+++ b/src/app/xien/xien.component.html
@@ -15,15 +15,15 @@
       <div class="form-group">
         <textarea name="data" [(ngModel)]="data" cols="60" rows="5" placeholder="Input"></textarea>
       </div>
-<!--      <div class="form-group" *ngIf="numberOfInput != 0">-->
-<!--        <p>Có <span style="color: red">{{numberOfInput}}</span> được nhập</p>-->
-<!--      </div>-->
+      <!--      <div class="form-group" *ngIf="numberOfInput != 0">-->
+      <!--        <p>Có <span style="color: red">{{numberOfInput}}</span> được nhập</p>-->
+      <!--      </div>-->
       <div class="form-group">
         <textarea name="data" [(ngModel)]="exportData" cols="60" rows="5" placeholder="Số lớn hơn điều kiện"></textarea>
       </div>
-<!--      <div class="form-group" *ngIf="listUnsatisfactory.length != 0">-->
-<!--        <p>Có <span style="color: red">{{listUnsatisfactory.length}}</span> không thoả mãn điều kiện</p>-->
-<!--      </div>-->
+      <!--      <div class="form-group" *ngIf="listUnsatisfactory.length != 0">-->
+      <!--        <p>Có <span style="color: red">{{listUnsatisfactory.length}}</span> không thoả mãn điều kiện</p>-->
+      <!--      </div>-->
       <div class="form-group">
         <button class="btn btn-outline-primary" (click)="searchNumber()">Nhập dữ liệu</button>
       </div>
@@ -47,8 +47,8 @@
             <tbody>
             <tr *ngFor="let number of filterNumbers">
               <td>{{number.Number}}</td>
-              <td>{{number.ExtraPrice}}</td>
-              <td>{{number.totalPoint == null ? 0 : number.totalPoint}}</td>
+              <td>{{number.price1}}, {{number.price2}}, {{number.price3}}</td>
+              <td class="text-center">{{number.totalPoint == null ? 0 : number.totalPoint}}</td>
             </tr>
             </tbody>
           </table>
