--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -28,7 +28,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a routerLink="/" class="nav-link">
+          <a routerLink="/dit-nhat" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
               Đít nhất
