sua loi hien thị kết quả sau khi đánh lên text area

--- a/src/app/xien/xien.component.html
+++ b/src/app/xien/xien.component.html
@@ -15,9 +15,9 @@
       <div class="form-group">
         <textarea name="data" [(ngModel)]="data" cols="60" rows="5" placeholder="Input"></textarea>
       </div>
-      <!--      <div class="form-group" *ngIf="numberOfInput != 0">-->
-      <!--        <p>Có <span style="color: red">{{numberOfInput}}</span> được nhập</p>-->
-      <!--      </div>-->
+            <div class="form-group" *ngIf="numberOfInput != 0">
+              <p>Có <span style="color: red">{{numberOfInput}}</span> xiên được nhập</p>
+            </div>
       <div class="form-group">
         <textarea name="data" [(ngModel)]="exportData" cols="60" rows="5" placeholder="Số lớn hơn điều kiện"></textarea>
       </div>
