--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -10,7 +10,7 @@
       <div class="form-group">
         <label for="maximum">Điểm tối đa: </label>
         <input id="maximum" type="number" min="0" placeholder="Nhập số điểm tối đa" name="maximum"
-               [(ngModel)]="maximum">
+               [(ngModel)]="maximum" (keyup)="saveMaximumToLocalStorage()">
       </div>
       <div class="form-group">
         <textarea name="data" [(ngModel)]="data" cols="60" rows="5" placeholder="Input"></textarea>
