--- a/src/app/xien/xien.component.html
+++ b/src/app/xien/xien.component.html
@@ -4,8 +4,8 @@
     <div class="col-md-4">
       <h3>Ngày: {{date.getUTCDate()}}/{{date.getUTCMonth() + 1}}/{{date.getUTCFullYear()}}</h3>
       <div class="form-group">
-        <label for="search">Lọc số: </label>
-        <input id="search" type="number" min="0" placeholder="Nhập số" name="search" [(ngModel)]="search">
+        <label for="search">Tỉ giá: </label>
+        <input id="search" type="number" min="0" placeholder="Nhập số" name="search" [(ngModel)]="rate">
       </div>
       <div class="form-group">
         <label for="maximum">Điểm tối đa: </label>
