--- a/src/app/xien/xien.component.html
+++ b/src/app/xien/xien.component.html
@@ -13,13 +13,19 @@
                [(ngModel)]="maximum">
       </div>
       <div class="form-group">
-        <textarea name="data" [(ngModel)]="data" cols="60" rows="5" placeholder="Input"></textarea>
+        <textarea name="data" [(ngModel)]="data" cols="50" rows="5" placeholder="Input"></textarea>
       </div>
       <div class="form-group" *ngIf="numberOfInput != 0">
         <p>Có <span style="color: red">{{numberOfInput}}</span> xiên được nhập</p>
       </div>
-      <div class="form-group">
-        <textarea name="data" [(ngModel)]="exportData" cols="60" rows="5" placeholder="Số lớn hơn điều kiện"></textarea>
+      <div class="form-group row">
+        <div class="col-9">
+        <textarea #export name="data" [(ngModel)]="exportData" cols="50" rows="5"
+                  placeholder="Số lớn hơn điều kiện"></textarea>
+        </div>
+        <div class="col-2">
+          <button class="btn btn-primary" (click)="copyDataToClipboard(export)">Copy</button>
+        </div>
       </div>
       <div class="form-group" *ngIf="listUnsatisfactory.length != 0">
         <p>Có <span style="color: red">{{listUnsatisfactory.length}}</span> xiên không thoả mãn điều kiện</p>
