--- a/src/app/xien/xien.component.html
+++ b/src/app/xien/xien.component.html
@@ -12,8 +12,13 @@
         <input id="maximum" type="number" min="0" placeholder="Nhập số điểm tối đa" name="maximum"
                [(ngModel)]="maximum">
       </div>
-      <div class="form-group">
-        <textarea name="data" [(ngModel)]="data" cols="50" rows="5" placeholder="Input"></textarea>
+      <div class="form-group row">
+        <div class="col-9">
+          <textarea #dataInput name="data" [(ngModel)]="data" cols="50" rows="5" placeholder="Input"></textarea>
+        </div>
+        <div class="col-2">
+          <button class="btn btn-primary" (click)="copyDataToClipboard(dataInput)">Copy</button>
+        </div>
       </div>
       <div class="form-group" *ngIf="numberOfInput != 0">
         <p>Có <span style="color: red">{{numberOfInput}}</span> xiên được nhập</p>
