--- a/src/app/dit-nhat/dit-nhat.component.html
+++ b/src/app/dit-nhat/dit-nhat.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="form-group row">
         <div class="col-9">
-          <textarea name="data" #dataInput [(ngModel)]="data" cols="50" rows="5" placeholder="Input"></textarea>
+          <textarea name="data" #dataInput [(ngModel)]="data" cols="45" rows="5" placeholder="Input"></textarea>
         </div>
         <div class="col-2">
           <button class="btn btn-primary" (click)="copyDataToClipboard(dataInput)">Copy</button>
@@ -25,12 +25,14 @@
       </div>
       <div class="form-group row">
         <div class="col-9">
-        <textarea #export name="data" [(ngModel)]="exportData" cols="50" rows="5"
-                  placeholder="Số lớn hơn điều kiện"></textarea>
+          <textarea #export name="data" [(ngModel)]="exportData" cols="45" rows="5" placeholder="Số lớn hơn điều kiện"></textarea>
         </div>
         <div class="col-2">
           <button class="btn btn-primary" (click)="copyDataToClipboard(export)">Copy</button>
         </div>
+      </div>
+      <div class="form-group" *ngIf="listUnsatisfactory.length != 0">
+        <p>Có <span style="color: red">{{listUnsatisfactory.length}}</span> không thoả mãn điều kiện</p>
       </div>
       <div class="form-group">
         <button class="btn btn-outline-primary" (click)="searchNumber()">Nhập dữ liệu</button>
