--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,6 +20,14 @@
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <li class="nav-item">
+          <a routerLink="/users" class="nav-link">
+            <i class="nav-icon fas fa-list"></i>
+            <p>
+              Tài khoản
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
           <a routerLink="/" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
