create user done

--- a/src/app/user/list-user/list-user.component.html
+++ b/src/app/user/list-user/list-user.component.html
@@ -37,7 +37,7 @@
         <tr *ngFor="let user of listUser; index as i">
           <td>{{i + 1}}</td>
           <td>
-            <span>{{user.username}}</span>
+            <span>{{user.payload.doc.data().username}}</span>
           </td>
           <td>
             <div class="row">
