them phan quyen tai khoan

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
     <!-- Sidebar Menu -->
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="hasRoleAdmin">
           <a routerLink="/users" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
