--- a/src/app/user/create-user/create-user.component.html
+++ b/src/app/user/create-user/create-user.component.html
@@ -30,8 +30,8 @@
         <div class="form-group">
           <label for="role">Cấp quyền</label>
           <select id="role" class="form-control" name="role" [(ngModel)]="role">
-            <option value="0">Admin</option>
-            <option value="1">Quản lý</option>
+            <option value="admin">Admin</option>
+            <option value="manager">Quản lý</option>
           </select>
         </div>
       </div>
