--- a/src/app/user/list-user/list-user.component.html
+++ b/src/app/user/list-user/list-user.component.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col-6">
                   <button type="button" class="btn btn-block btn-danger" style="color: white" data-toggle="modal"
-                          data-target="#modal-delete">
+                          data-target="#modal-delete" (click)="getUser(user)">
                     <i class="fas fa-trash"></i>
                   </button>
                 </div>
@@ -75,7 +75,7 @@
         </div>
         <div class="modal-footer justify-content-between">
           <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
-          <button type="button" class="btn btn-danger" (click)="deleteUser()">Xóa</button>
+          <button type="button" class="btn btn-danger" (click)="deleteUser(user)">Xóa</button>
         </div>
       </div>
       <!-- /.modal-content -->
