--- a/src/app/user/list-user/list-user.component.html
+++ b/src/app/user/list-user/list-user.component.html
@@ -35,7 +35,7 @@
         </thead>
         <tbody>
         <tr *ngFor="let user of listUser; index as i">
-          <ng-container *ngIf="username != user.payload.doc.data().username">
+          <ng-container *ngIf="currentUsername != user.payload.doc.data().username">
             <td>{{i + 1}}</td>
             <td>
               <span>{{user.payload.doc.data().username}}</span>
@@ -43,9 +43,10 @@
             <td>
               <div class="row">
                 <div class="col-6">
-                  <a [routerLink]="['edit',user.id]" class="btn btn-block btn-primary" style="color: white">
+                  <button class="btn btn-block btn-primary" style="color: white" data-toggle="modal"
+                          data-target="#modal-update" (click)="getUser(user)">
                     <i class="fas fa-edit"></i>
-                  </a>
+                  </button>
                 </div>
                 <div class="col-6">
                   <button type="button" class="btn btn-block btn-danger" style="color: white" data-toggle="modal"
@@ -76,6 +77,37 @@
         <div class="modal-footer justify-content-between">
           <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
           <button type="button" class="btn btn-danger" (click)="deleteUser(user)">Xóa</button>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <div class="modal fade" id="modal-update">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Chỉnh sửa tài khoản</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="inputName">Tên tài khoản</label>
+            <input type="text" id="inputName" class="form-control" name="username" [(ngModel)]="username">
+          </div>
+          <div class="form-group">
+            <label for="role">Cấp quyền</label>
+            <select id="role" class="form-control" name="role" [(ngModel)]="role">
+              <option value="admin" [selected]="role == 'admin'">Admin</option>
+              <option value="manager" [selected]="role == 'manager'">Quản lý</option>
+            </select>
+          </div>
+        </div>
+        <div class="modal-footer justify-content-between">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
+          <button type="button" class="btn btn-primary" (click)="updateUser(user)">Chỉnh sửa</button>
         </div>
       </div>
       <!-- /.modal-content -->
