--- a/src/app/dit-nhat/dit-nhat.component.html
+++ b/src/app/dit-nhat/dit-nhat.component.html
@@ -4,7 +4,8 @@
       <h3>Ngày: {{date.getUTCDate()}}/{{date.getUTCMonth() + 1}}/{{date.getUTCFullYear()}}</h3>
       <div class="form-group">
         <label for="search">Lọc số: </label>
-        <input id="search" type="number" min="0" placeholder="Nhập số" name="search" [(ngModel)]="search">
+        <input id="search" (keyup)="saveSearchToLocalStorage()"
+               type="number" min="0" placeholder="Nhập số" name="search" [(ngModel)]="search">
       </div>
       <div class="form-group">
         <label for="maximum">Điểm tối đa: </label>
