add ba cang component

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -51,6 +51,14 @@
             </p>
           </a>
         </li>
+        <li class="nav-item">
+          <a routerLink="/ba-cang" class="nav-link">
+            <i class="nav-icon fas fa-list"></i>
+            <p>
+              Ba càng
+            </p>
+          </a>
+        </li>
       </ul>
     </nav>
     <!-- /.sidebar-menu -->
