--- a/src/app/dit-nhat/dit-nhat.component.html
+++ b/src/app/dit-nhat/dit-nhat.component.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="form-group" *ngIf="numberOfInput != 0">
-        <p>Có <span style="color: red">{{numberOfInput}}</span> xiên được nhập</p>
+        <p>Có <span style="color: red">{{numberOfInput}}</span> số được nhập</p>
       </div>
       <div class="form-group row">
         <div class="col-9">
