--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -140,7 +140,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h3 class="card-title">
+          <h3 class="card-title"  style="color:red;">
             MÃ CƯỢC GẦN ĐÂY
           </h3>
           <div class="card-tools">
