--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -23,7 +23,8 @@
         </div>
       </div>
       <div class="form-group" *ngIf="numberOfInput != 0">
-        <p>Có <span style="color: red">{{numberOfInput}}</span> được nhập</p>
+        <p>Có <span style="color: red">{{numberOfInput}}</span> được nhập, có <span
+          style="color: red">{{resultNumbers.length}}</span> số thỏa mãn</p>
       </div>
       <div class="form-group row">
         <div class="col-9">
@@ -140,7 +141,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h3 class="card-title"  style="color:red;">
+          <h3 class="card-title" style="color:red;">
             MÃ CƯỢC GẦN ĐÂY
           </h3>
           <div class="card-tools">
@@ -161,7 +162,8 @@
                 [style.background]="ticket.Status == 9?'#718299':''">
               <td style="color:red;">{{ticket.TicketNumber}}</td>
               <td style="color:red;"></td>
-              <td [style.text-decoration]="ticket.Status == 9?'line-through':''" style="color:red;">{{ticket.Amount}}</td>
+              <td [style.text-decoration]="ticket.Status == 9?'line-through':''"
+                  style="color:red;">{{ticket.Amount}}</td>
               <td>
                 <button class="btn btn-outline-danger" [disabled]="ticket.Status == 9" (click)="cancelPlay(ticket)">
                   Hủy
