--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -158,14 +158,14 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let ticket of latest"
+            <tr *ngFor="let ticket of latest;index as i"
                 [style.background]="ticket.Status == 9?'#718299':''">
-              <td style="color:red;">{{ticket.TicketNumber}}</td>
-              <td style="color:red;"></td>
+              <td [style.color]="i == 1 ? 'red' : ''">{{ticket.TicketNumber}}</td>
+              <td [style.color]="i == 1 ? 'red' : ''"></td>
               <td [style.text-decoration]="ticket.Status == 9?'line-through':''"
-                  style="color:red;">{{ticket.Amount}}</td>
+                  [style.color]="i == 1 ? 'red' : ''">{{ticket.Amount}}</td>
               <td>
-                <button class="btn btn-outline-danger" [disabled]="ticket.Status == 9" (click)="cancelPlay(ticket)">
+                <button class="btn btn-outline-primary" [disabled]="ticket.Status == 9" (click)="cancelPlay(ticket)">
                   Hủy
                 </button>
               </td>
