--- a/src/app/xien/xien.component.html
+++ b/src/app/xien/xien.component.html
@@ -122,7 +122,7 @@
       </div>
       <div class="card">
         <div class="card-header">
-          <h3 class="card-title"  style="color:red;">
+          <h3 class="card-title" style="color:red;">
             MÃ CƯỢC GẦN ĐÂY
           </h3>
           <div class="card-tools">
@@ -139,11 +139,12 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let ticket of latest"
+            <tr *ngFor="let ticket of latest; index as i"
                 [style.background]="ticket.Status == 9?'#718299':''">
-              <td  style="color:red;">{{ticket.TicketNumber}}</td>
-              <td  style="color:red;"></td>
-              <td  style="color:red;" [style.text-decoration]="ticket.Status == 9?'line-through':''">{{ticket.Amount}}</td>
+              <td [style.color]="i == 0 ? '#c90404' : ''">{{ticket.TicketNumber}}</td>
+              <td [style.color]="i == 0 ? '#c90404' : ''"></td>
+              <td [style.color]="i == 0 ? '#c90404' : ''"
+                  [style.text-decoration]="ticket.Status == 9?'line-through':''">{{ticket.Amount}}</td>
               <td>
                 <button class="btn btn-outline-danger" [disabled]="ticket.Status == 9" (click)="cancelPlay(ticket)">
                   Hủy
