--- a/src/app/ba-cang/ba-cang.component.html
+++ b/src/app/ba-cang/ba-cang.component.html
@@ -14,10 +14,11 @@
       </div>
       <div class="form-group row">
         <div class="col-9">
-          <textarea name="data" #dataInput [(ngModel)]="data" cols="45" rows="5" placeholder="Input"></textarea>
+          <textarea name="data" #dataInput [(ngModel)]="data" cols="45" rows="5" (keyup)="disableCopy()"
+                    placeholder="Input"></textarea>
         </div>
         <div class="col-2">
-          <button class="btn btn-primary" (click)="copyDataToClipboard(dataInput)" [disabled]="data.length==0">
+          <button class="btn btn-primary" (click)="copyDataToClipboard(dataInput)" [disabled]="!isEnabled">
             Copy
           </button>
         </div>
