--- a/src/app/xien/xien.component.html
+++ b/src/app/xien/xien.component.html
@@ -13,10 +13,12 @@
       </div>
       <div class="form-group row">
         <div class="col-9">
-          <textarea #dataInput name="data" [(ngModel)]="data" cols="45" rows="5" placeholder="Input"></textarea>
+          <textarea #dataInput name="data" [(ngModel)]="data" cols="45" rows="5" (keyup)="disableCopy()"
+                    placeholder="Input"></textarea>
         </div>
         <div class="col-2">
-          <button class="btn btn-primary" (click)="copyDataToClipboard(dataInput)" [disabled]="data.length==0">
+          <button class="btn btn-primary" (click)="copyDataToClipboard(dataInput)"
+                  [disabled]="!isEnabled">
             Copy
           </button>
         </div>
